tests/skip/duplicate-getters-2.stderr
error: encountered duplicate `#[skip(getters)]` attribute for field
 --> tests/skip/duplicate-getters-2.rs:5:15
  |
5 |     #[skip] #[skip(getters)]
  |               ^^^^^^^^^^^^^

error: duplicate `#[skip(getters)]` here
 --> tests/skip/duplicate-getters-2.rs:5:7
  |
5 |     #[skip] #[skip(getters)]
  |       ^^^^
